--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
+<!DOCTYPE html>
+<head lang="en-US">
+    <title>Example</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="theme.css">
+</head>
 <h1>Testing</h1>
