--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head lang="en-US">
     <title>Example</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="theme.css">
+    <link rel="stylesheet" href="/theme.css">
 </head>
 <h1>Testing</h1>
