--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Taiwanese School of Atlanta</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="TSAStyle.css">
+  <link rel="stylesheet" href="/TSAStyle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
